  (the trouble was, the DMA timeouts didn't work because the timer C was not
  enabled at the time when disk initialisation occurred) (LVL)
- added limited parallel port implementation (output only) (LVL)
- indented some files (LVL)
- bios/floppy.c: FastRAM floppy read/write (FRB usage was read-only); 
  flopvbl added (but still no efficient mediach()) (LVL)
- Makefile: added size checks for targets 192, 256, 512. (LVL)
- vdi/gsxasm1.S: made __ABLINE externally visible (LVL)
- updated some doc/ files (LVL)

14. May. 2002
- vdi/vinput.c - renamed to vdiinput.c, should hold all input stuff (MAD)
- vdi/vdiinput.c - implemented gloc_key in C, more will follow (MAD)

16. May. 2002
- vdi/vdimouse.S - moved/rewrote DIS_CUR to monobj.c:dis_cur()  (MAD)
- vdi/vdiinput.c - moved/rewrote vdimouse_init/exit to here (MAD)
- vdi/vdimouse.S - move rest of asm routines from mousedrv.S to here (MAD)
- vdi/mousedrv.S - deleted
- util/miscasm.S - put trap1/13/14 to here from bdos/ for common use (MAD) 
- include/asm.h - added trap1/13/14 calls as externals (MAD)
- vdi/vdiinput.c - vdimouse_init() fixed (MAD)

17. May. 2002
- vdi/*.c - replaced all gotos by other constructs (MAD)
- vdi/lisastubs - removed, put into vdi/monobj.c for less files (MAD)

18. May. 2002
- vdi/text.c - act_siz implemented in C (asm commented out) (MAD)

30. May 2002
- aes/* - Removed all "REG"s in old function declarations, GCC seems to
  have problems with "registered" parameters. This fixes the GEM dialog
  bug that caused the text fields not to redraw correctly (THH).
- aes/gemsuper.c - Changed the AES version back to 1.02, seems to work
  better this way with most applications (THH).
- vdi/isin.c - removed. Did put functions to vdi/monout.c (MAD)
  vdi/cbssdefs.c - removed. Did put functions to vdi/vdimain.c (MAD)
  vdi/jmptbl.c - removed. Did put tables to vdi/vdimain.c (MAD)
  vdi/jmptbl.h - removed. Did put prototypes to vdi/vdimain.c (MAD)